# Check_Mate

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: backend-foundation.yml
backend/: Cargo.toml  README.md
backend/crates/parser_worker/: Cargo.toml
backend/crates/parser_worker/src/: lib.rs  local_import.rs  main.rs
backend/crates/parser_worker/src/local_import/: archive.rs  batch_sql.rs  compute_rows.rs  context.rs  mbr_domain.rs  mod.rs  persist.rs  profiles.rs  row_models.rs  runner.rs  tests.rs  timezone.rs  util.rs
backend/crates/tracker_ingest_runner/: Cargo.toml
backend/crates/tracker_ingest_runner/src/: lib.rs  main.rs
backend/crates/tracker_ingest_runner/tests/: runner_smoke.rs
backend/crates/tracker_web_api/: Cargo.toml
backend/crates/tracker_web_api/src/: dto.rs  errors.rs  lib.rs  main.rs  upload_spool.rs  ws.rs
backend/crates/tracker_web_api/src/routes/: dashboard.rs  ingest.rs  mod.rs  session.rs
backend/crates/tracker_web_api/tests/: api_smoke.rs
backend/docs/: exact_core_contract.md  preflop_matrix_contract.md  street_strength_contract.md
backend/migrations/: 0001_init_source_of_truth.sql  0002_exact_pot_ko_core.sql  0003_mbr_stage_economics.sql  0004_exact_core_schema_v2.sql  0005_hand_summary_results.sql  0006_hand_positions.sql  0007_hand_action_all_in_metadata.sql  0008_street_hand_strength_canonical_contract.sql  0009_hand_pot_eligibility_and_uncertain_codes.sql  0010_hand_eliminations_ko_v2.sql  0011_mbr_boundary_resolution_v2.sql  0012_mbr_tournament_ft_helper.sql  0013_player_street_features.sql  0014_mbr_stage_predicates_v1.sql  0015_ko_event_money_contracts.sql  0016_ko_credit_pot_no.sql  0017_tournament_hand_order.sql  0018_hand_positions_v2.sql  0019_unified_settlement_contract.sql  0020_hand_eliminations_v2.sql  (+11 more)
docs/: COMMITTED_PACK_SYNTAX_CATALOG.md  INGEST_V2_BENCHMARKS.md  QUALITY_GATES.md  ROADMAP.md  RUNBOOK.md  STATUS_ASSESSMENT.md  STREET_STRENGTH_SPEC.md  STREET_STRENGTH_V2_SPEC.md  WIDE_CORPUS_TRIAGE.md  check_mate_audit_2026-03-25_ru.md  hand_cat.md  hand_category.md  ingest_v2_rearchitecture_plan.md  ingest_v2_rearchitecture_progress.md  mbr.md  mbr.yml  mbr_audit.md  mbr_plan.yml  par_nor.md  parse_normal.md  refactor_plan.md  сила руки.md
scripts/: backend_test.sh  common.sh  db_bootstrap.sh  db_down.sh  db_psql.sh  db_up.sh  import_fixture.sh  run_ingest_v2_bench.sh  run_ingest_v2_mixed_scan.sh
src/: App.jsx  App.test.jsx  index.css
(+174 files in other folders)
