[package]
name = "parser_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tracker_parser_core = { path = "../tracker_parser_core" }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
