[package]
name = "tracker_ingest_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
parser_worker = { path = "../parser_worker" }

[dev-dependencies]
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
sha2 = "0.10.9"
tracker_ingest_runtime = { path = "../tracker_ingest_runtime" }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zip = "4.6.1"
