[package]
name = "tracker_web_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["multipart", "ws"] }
http = "1.3.1"
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "time"] }
tracker_ingest_runtime = { path = "../tracker_ingest_runtime" }
tracker_parser_core = { path = "../tracker_parser_core" }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zip = "4.6.1"

[dev-dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
tokio-tungstenite = "0.28.0"
